objects/evt__Session__c.object
<CustomObject>
    <customHelpPage>evt__EventManagementHelp</customHelpPage>
    <description>Sessions associated with an event.  Classes, workshops, luncheons,</description>
    <fields>
        <fullName>evt__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines whether or not the session is visible to attendees and available for signup</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>evt__Attendance__c</fullName>
        <description>Shows the ratio of confirmed attendees to max attendees.</description>
        <formula>IF(OR(ISNULL(evt__Max_Attendees__c),evt__Max_Attendees__c = 0),IMAGE(&quot;/s.gif&quot;,&quot;&quot;),IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, MIN(evt__Confirmed_Attendees__c,evt__Max_Attendees__c)/evt__Max_Attendees__c * 100) &amp; IMAGE(&quot;/s.gif&quot;, &quot;white&quot;, 15, 100 - (MIN(evt__Confirmed_Attendees__c,evt__Max_Attendees__c)/evt__Max_Attendees__c * 200)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the ratio of confirmed attendees to max attendees.</inlineHelpText>
        <label>Attendance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Confirmed_Attendees__c</fullName>
        <inlineHelpText>Number of session assignees with status = &apos;Confirmed&apos;</inlineHelpText>
        <label>Confirmed Attendees</label>
        <summaryFilterItems>
            <field>evt__Session_Assignment__c.evt__Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>evt__Session_Assignment__c.evt__Event_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>evt__Date_Format__c</fullName>
        <description>Format to use in displaying session dates on the public website.  Leave blank to use default event settings.</description>
        <inlineHelpText>Format to use in displaying session dates on the public website.  Leave blank to use default event settings.</inlineHelpText>
        <label>Date Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MM/dd/yyyy</fullName>
                </value>
                <value>
                    <fullName>dd/MM/yyyy</fullName>
                </value>
                <value>
                    <fullName>yyyy/MM/dd</fullName>
                </value>
                <value>
                    <fullName>EEE</fullName>
                </value>
                <value>
                    <fullName>EEEEE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>evt__Detail__c</fullName>
        <description>Session abstract or full detail page content.</description>
        <inlineHelpText>Session abstract or full detail page content.</inlineHelpText>
        <label>Detail</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>evt__End__c</fullName>
        <description>End date/time for session.</description>
        <inlineHelpText>End date/time for session.</inlineHelpText>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>evt__Event__c</fullName>
        <label>Event</label>
        <referenceTo>evt__Special_Event__c</referenceTo>
        <relationshipLabel>Event Sessions</relationshipLabel>
        <relationshipName>Event_Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>evt__Max_Attendees__c</fullName>
        <inlineHelpText>Maximum number of confirmed attendess allowed.  Leave blank for unlimited.</inlineHelpText>
        <label>Max Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>evt__On_Payment_Completed__c</fullName>
        <description>On-payment-completed tag(s) to assign to shopping cart items created when this session is purchased.</description>
        <inlineHelpText>On-payment-completed tag(s) to assign to shopping cart items created when this session is purchased.</inlineHelpText>
        <label>On Payment Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Order__c</fullName>
        <description>Used to sort sessions when displayed on the Sites registration pages.</description>
        <inlineHelpText>Used to sort sessions when displayed on the Sites registration pages.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>evt__Overview__c</fullName>
        <description>Session overview or brief description for display in the session list online.</description>
        <inlineHelpText>Session overview or brief description for display in the session list online.</inlineHelpText>
        <label>Overview</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>evt__Session_Details__c</fullName>
        <description>HTML content to display on session details page on site.</description>
        <inlineHelpText>HTML content to display on session details page on site.</inlineHelpText>
        <label>Session Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>evt__Session_Fee__c</fullName>
        <label>Session Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>evt__Session_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Event Sessions</relationshipLabel>
        <relationshipName>Event_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>evt__Short_Description__c</fullName>
        <description>Text description of the session.  Displayed on the registration page in the session selection area.</description>
        <inlineHelpText>Text description of the session.  Displayed on the registration page in the session selection area.</inlineHelpText>
        <label>Short Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>evt__Start__c</fullName>
        <description>Start date/time for session.</description>
        <inlineHelpText>Start date/time for session.</inlineHelpText>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>evt__Time_Format__c</fullName>
        <description>Format to use in displaying session times on the public website.  Leave blank to use default event settings.</description>
        <inlineHelpText>Format to use in displaying session times on the public website.  Leave blank to use default event settings.</inlineHelpText>
        <label>Time Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>hh:mm a</fullName>
                </value>
                <value>
                    <fullName>hh:mm a z</fullName>
                </value>
                <value>
                    <fullName>h:mm a</fullName>
                </value>
                <value>
                    <fullName>h:mm a z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>evt__Track__c</fullName>
        <inlineHelpText>Used to group sessions into &apos;Tracks&apos; or categories of content.</inlineHelpText>
        <label>Track</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Event Session</label>
    <listViews>
        <fullName>evt__All</fullName>
        <columns>NAME</columns>
        <columns>evt__Event__c</columns>
        <columns>evt__Start__c</columns>
        <columns>evt__Active__c</columns>
        <columns>evt__Attendance__c</columns>
        <columns>evt__Track__c</columns>
        <columns>evt__Session_Fee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>